* 2013-07-31 - thorben.betten@open-xchange.com

 - Fix for bug 27767: Refactored to use "ignoreTranslation" flag in JSON layer only to not affect folder caches
 - Fix for bug 27914: Interpret "Inbox/" full name prefix as "INBOX/"
 - Fix for bug 27891: Check for valid values provided for mandatory fields in update attempt

* 2013-07-30 - martin.herfurth@open-xchange.com

 - Fix for bug 27581: Removed Direct Link label from external invitation mails.
 - Fix for bug 27314: Missing folder id on itip analyze response with exceptions.

* 2013-07-30 - thorben.betten@open-xchange.com

 - Fix for bug 27868: Added null guard
 - Fix for bug 27872: Introduced possibility to output unparsable images to disk for debugging purpose
 - Fix for bug 27477: Refactored IMAP exception class to let its error message reside in a dedicated translatable class file
 - Fix for bug 27892: Introduced capability for global address book "gab"

* 2013-07-30 - tobias.friedrich@open-xchange.com

 - Fix for bug 27396: Added "supported_capabilities" to indicate non-publishable folders   
 - Fix for bug 26639: Introduced image data source for user contacts   

* 2013-07-29 - jan.bauerdick@open-xchange.com

 - Fix for bug 27775: Use new build system to build admin clt packages

* 2013-07-29 - thorben.betten@open-xchange.com

 - Fix for bug 27845: Fixed imports for login counter tool
 - Fix for bug 27640: Ignore delimiting white-space between mail-safe encoded words
 - Fix for bug 27863: Added null guard while composing mail debug information
 - Fix for bug 27864: Deal with possible null elements in passed message array on APPEND operation
 - Fix for bug 27866: Handle possible null return value from iCal parse attempt

* 2013-07-26 - marcus.klein@open-xchange.com

 - Fix for bug 26803: Not adding ConcurrentMarkSweepGC options in post install script if ParallelOldGC is configured.

* 2013-07-26 - thorben.betten@open-xchange.com

 - Fix for bug 27706: Deal with UTC time zone set for UTC properties
